tests/ui/invalid_pymethods_buffer.stderr
error: `__getbuffer__` must be `unsafe fn`
 --> tests/ui/invalid_pymethods_buffer.rs:9:8
  |
9 |     fn getbuffer_must_be_unsafe(&self, _view: *mut pyo3::ffi::Py_buffer, _flags: std::ffi::c_int) {}
  |        ^^^^^^^^^^^^^^^^^^^^^^^^

error: `__releasebuffer__` must be `unsafe fn`
  --> tests/ui/invalid_pymethods_buffer.rs:16:8
   |
16 |     fn releasebuffer_must_be_unsafe(&self, _view: *mut pyo3::ffi::Py_buffer) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors
